--- a/web-repl/views/index.jade
+++ b/web-repl/views/index.jade
@@ -33,9 +33,14 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js')
     script(src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js", type="text/javascript")
+
+    script(src='/socket.io/socket.io.js')
+    script(src='/js/somata-socketio.js')
+
     script(src="/js/peg-0.8.0.min.js", type="text/javascript")
     script(src="/js/jquery.jsonview.js", type="text/javascript")
     script(src="/js/stayFit.js", type="text/javascript")
+
     script(src="/js/parser-web.js", type="text/javascript")
     script(src="/js/repl.js", type="text/javascript")
 
