round out frontend using react

--- a/web-repl/static/jquery.jsonview.sass
+++ b/web-repl/static/jquery.jsonview.sass
@@ -48,15 +48,18 @@
         margin: 0 0 0 2em
         padding: 0
 
-    a
-        color: #38f
-
+.marker
+    color: #ddd
+    font-weight: bold
 .string
     color: #bbb
 .num
     color: #bd84d5
+    color: #e88
 .bool
     color: #00b8ff
+    color: #5c7
+    font-weight: bold
 .null
     color: magenta
 .key
