--- a/web-repl/views/index.jade
+++ b/web-repl/views/index.jade
@@ -17,7 +17,7 @@ html
                 a source
             h1 hashpipe
             h2 v0.4.20
-        .lines
+        #repl
 
     script#_input_line(type="text/template")
         .line.read
@@ -33,6 +33,9 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js')
     script(src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js", type="text/javascript")
+    script(src='//cdnjs.cloudflare.com/ajax/libs/bacon.js/0.7.30/Bacon.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/react/0.12.0/react-with-addons.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/react/0.12.0/JSXTransformer.js')
 
     script(src='/socket.io/socket.io.js')
     script(src='/js/somata-socketio.js')
@@ -42,5 +45,5 @@ html
     script(src="/js/stayFit.js", type="text/javascript")
 
     script(src="/js/parser-web.js", type="text/javascript")
-    script(src="/js/repl.js", type="text/javascript")
+    script(src="/js/repl.js", type="text/jsx")
 
