aliasing; storing aliases in localStorage; experiments with React elements

--- a/web-repl/static/screen.sass
+++ b/web-repl/static/screen.sass
@@ -124,3 +124,12 @@ img
         .output
             padding-left: 10%
 
+.output ul
+    padding-left: 20px
+    li
+        margin-bottom: 10px
+        ul
+            margin-top: 10px
+
+.output p
+    margin: 8px 0 0
